# unreferenced_files

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Makefile  README.md  flake.nix
.github/workflows/: continuous-integration.yml  dogfood.yml
ci/: check-e2e-formatting.sh  check-python-formatting.Dockerfile  check-python-formatting.sh  check-rust-formatting.Dockerfile  check-rust-linting.Dockerfile  compile.Dockerfile  end-to-end-test.Dockerfile  end-to-end-test.sh  fix-e2e-formatting.sh  fix-python-formatting.Dockerfile  fix-python-formatting.sh  fix-rust-formatting.Dockerfile  publish-binary.Dockerfile  publish-binary.sh  publish-crate.Dockerfile  unit-test.Dockerfile
end-to-end-tests/features/: accepts-directories-as-input.feature  accepts-file-as-input.feature  accepts-files-as-input.feature  accepts-multiple-files-and-directories-as-input.feature  accepts_files_as_input.feature  accepts_multiple_files_and_directories_as_input.feature  assert-no-unreferenced-files.feature  ignore-search-for.feature  ignore-search.feature  only-search-for.feature  only-search.feature  only_search.feature  requires-search-and-search-for.feature  search-filters-mutually-exclusive.feature  search_for_filters_mutually_exclusive.feature  unreferenced-files.feature
end-to-end-tests/features/steps/: arguments.py  assertions.py  git.py  given.py  then.py  unreferenced-files.py  utilities.py  when.py
src/: main.rs
src/cli/: mod.rs
src/file_content/: mod.rs
src/file_path_variants/: mod.rs
src/file_path_variants_regexes/: mod.rs
src/file_utilities/: mod.rs
src/filters/: mod.rs
src/model/: mod.rs
src/model/file_path_variants/: mod.rs
src/model/file_path_variants_regexes/: mod.rs
src/model/filters/: mod.rs
src/model/raw_file/: mod.rs
src/model/raw_files/: mod.rs
src/model/search/: mod.rs
src/model/search/raw_file/: mod.rs
src/model/search_for/: mod.rs
src/model/search_for/tests/: mod.rs
src/model/unreferenced_files/: mod.rs
src/model/unreferenced_files/tests/: mod.rs
src/model/utilities/: mod.rs
src/regex_utilities/: mod.rs
src/reporter/: mod.rs
src/search/: mod.rs
src/search/raw_file/: mod.rs
src/search_for/: mod.rs
src/tests/: mod.rs
src/tests/file_name/snapshots/: unreferenced_files__model__search_for__tests__file_name__not_found.snap  unreferenced_files__tests__file_name__found.snap  unreferenced_files__tests__file_name__not_found.snap
src/tests/file_stem/snapshots/: unreferenced_files__model__search_for__tests__file_stem__found.snap  unreferenced_files__tests__file_stem__found.snap  unreferenced_files__tests__file_stem__not_found.snap
src/tests/multiple_searching/snapshots/: unreferenced_files__model__search_for__tests__multiple_searching__found.snap  unreferenced_files__model__search_for__tests__multiple_searching__multiple_not_found.snap  unreferenced_files__tests__multiple_searching__found.snap  unreferenced_files__tests__multiple_searching__multiple_not_found.snap  unreferenced_files__tests__multiple_searching__not_found.snap
src/tests/relative_path/snapshots/: unreferenced_files__model__search_for__tests__relative_path__found.snap  (+3 more)
src/unreferenced_files/: mod.rs
src/unreferenced_files/tests/: mod.rs
src/utilities/: mod.rs
src/utilities/file/: mod.rs
src/utilities/regex/: mod.rs
unreferenced_files/: Cargo.toml  README.md
unreferenced_files/end-to-end-tests/features/: accepts_directories_as_input.feature  assert-no-unreferenced-files.feature  requires_search_and_search_for.feature
unreferenced_files/end-to-end-tests/features/steps/: assertions.py  given.py  then.py  utilities.py  when.py
unreferenced_files/src/: main.rs
unreferenced_files/src/cli/: mod.rs
unreferenced_files/src/reporter/: mod.rs
unreferenced_files_lib/: Cargo.toml  README.md
unreferenced_files_lib/src/: lib.rs
unreferenced_files_lib/src/file_path_variants/: mod.rs
unreferenced_files_lib/src/filters/: mod.rs
unreferenced_files_lib/src/search_for/: mod.rs
unreferenced_files_lib/src/tests/file_name/snapshots/: unreferenced_files_lib__tests__file_name__found.snap  unreferenced_files_lib__tests__file_name__not_found.snap
unreferenced_files_lib/src/tests/file_stem/snapshots/: unreferenced_files_lib__tests__file_stem__found.snap  unreferenced_files_lib__tests__file_stem__not_found.snap
unreferenced_files_lib/src/tests/multiple_searching/snapshots/: unreferenced_files_lib__tests__multiple_searching__found.snap  unreferenced_files_lib__tests__multiple_searching__multiple_not_found.snap  unreferenced_files_lib__tests__multiple_searching__not_found.snap
unreferenced_files_lib/src/tests/relative_path/snapshots/: unreferenced_files_lib__tests__relative_path__found.snap  unreferenced_files_lib__tests__relative_path__not_found.snap
unreferenced_files_lib/src/tests/singular_searching/snapshots/: unreferenced_files_lib__tests__singular_searching__found.snap  unreferenced_files_lib__tests__singular_searching__multiple_not_found.snap  unreferenced_files_lib__tests__singular_searching__not_found.snap
(+48 files in other folders)
