[package]
name = "unreferenced_files"
description = "A utility for finding unused and unreferenced files."
version = "2.2.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/DeveloperC286/unreferenced_files"
readme = "README.md"
keywords = ["find", "unreferenced", "files", "unused"]
categories = ["command-line-utilities", "development-tools", "parser-implementations", "text-processing", "data-structures"]


[dependencies]
# For CLI parsing.
clap = { version = "4.4.6", features = ["derive"] }

# For logging.
log = "0.4.20"
pretty_env_logger = "0.5.0"

# For searching for references in files.
regex = "1.9.6"

# For error handling.
anyhow = "1.0.89"


[dev-dependencies]
# For snapshot testing.
insta = "=1.46.3"
lazy_static = "=1.5.0"
