[package]
name = "unreferenced_files"
description = "A utility for finding unused and unreferenced files."
version = "2.0.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/unreferenced_files"
readme = "README.md"
keywords = ["find", "unreferenced", "files", "unused"]
categories = ["command-line-utilities", "development-tools", "parser-implementations", "text-processing", "data-structures"]


[dependencies]
# For CLI parsing.
structopt = "0.3.26"

# For logging.
log = "0.4.14"
pretty_env_logger = "0.4.0"

unreferenced_files_lib = "0.1.0"
