[package]
name = "unreferenced_files"
description = "A utility for finding unused and unreferenced files."
version = "2.0.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/DeveloperC286/unreferenced_files"
readme = "README.md"
keywords = ["find", "unreferenced", "files", "unused"]
categories = ["command-line-utilities", "development-tools", "parser-implementations", "text-processing", "data-structures"]


[dependencies]
# For CLI parsing.
clap = { version = "4.4.6", features = ["derive"] }

# For logging.
log = "0.4.20"
pretty_env_logger = "0.5.0"

unreferenced_files_lib = "0.1.0"
